--- a/form (2).htm
+++ b/form (2).htm
@@ -14,8 +14,9 @@
 
 <body>
 
-    <div>
+    <div class="card" style="background-color: lemonchiffon; border-radius: 12px; border-width: 0px;">
         <h1>TITLE SUBMISSION</h1>
+
         <form id="formulaire" action="http://127.0.0.1/login_usuario">
             <label for="fname">Username</label>
             <input type="text" placeholder="user_name" name="user_name">
@@ -31,6 +32,7 @@
 
 
         </form>
+
         <!--<button id="togs" onclick="se()" style="background-color: transparent; border-radius: 8px; border-width: 0px; position: relative; top: -165px; left: 1000px; border-width: 0px; "><i class="fas fa-eye" style="background-color: transparent; border-radius: 10px;"></i></button>
         <button id="togs" onclick="se()" style="background-color: transparent; border-radius: 8px; border-width: 0px; position: relative; top: -294px; left: 966px; border-width: 0px; "><i class="fas fa-eye" style="background-color: transparent; border-radius: 10px;"></i></button>-->
     </div>
