--- a/Module 4 (1.2)/karpeta/karpeta_func/Module 4 (1)/form (2).htm
+++ b/Module 4 (1.2)/karpeta/karpeta_func/Module 4 (1)/form (2).htm
@@ -51,7 +51,7 @@
                 <input type="date" data-date-inline-picker="true" id="date" />
                 <label for="corl">Color favorito</label>
                 <div class="select">
-                    <select id="corl" name="colors" id="colors" form="colorform">
+                    <!--<select id="corl" name="colors" id="colors" form="colorform">
                 <option value="negro" style="background-color: black; color: white;">Negro</option>
                 <option value="azul" style="background-color: skyblue; color: black;">Azul</option>
                 <option value="marrón" style="background-color: burlywood; color: black;">Marrón</option>
@@ -63,7 +63,8 @@
                 <option value="blanco">Blanco</option>
                 <option value="amarillo" style="background-color: rgb(248, 232, 85); color: black;">Amarillo</option>
                 <option value="gris" style="background-color: lightgrey; color: black;">Gris</option>
-              </select>
+              </select>-->
+                  <input type="color">
                 </div>
 
                 <input type="submit" value="Submit" onclick="redirect()">
